{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "72783af8-d71f-4750-a917-d422ba065309",
            "actions": [
                {
                    "name": "TriggerLeft",
                    "type": "Value",
                    "id": "f633f6c3-27fa-4f70-8548-34102da44124",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerRight",
                    "type": "Value",
                    "id": "3f60351f-f49a-4390-80be-058427c934cf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StickRight",
                    "type": "Value",
                    "id": "37489fea-c9fb-4060-bc52-af20033f9cd7",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StickLeft",
                    "type": "Value",
                    "id": "88225ac6-fed2-4ae0-ae72-7267156b9dc1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "28d5dc99-dbe6-4965-9620-002e8a1b5bc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "PassThrough",
                    "id": "43908157-3dc6-4db7-876d-88007614aa65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "4d7576e0-4a9e-4b56-b23c-99956378e583",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "093cf1f8-8fd7-40ae-b457-db9b4e54bb23",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc9ec492-1ba0-4e10-821e-711798aca092",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b249560-2e22-46f8-8022-3d31875d6463",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e550c73-3a94-4974-85c0-04f8d47b70fe",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "016f4042-2abd-4c7c-a6e0-bfe936cb8ce1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f9f0057-2f3b-4b0f-a243-b00a1128a646",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96c1cf4a-58b7-493b-a6fd-7119633b7c88",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "QuickTime",
            "id": "3518bdaf-9a0a-43e0-8e7b-33e71587d181",
            "actions": [
                {
                    "name": "Q1",
                    "type": "Button",
                    "id": "0a58e5c8-72af-4e0f-afb9-acee54bfba53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Q2",
                    "type": "Button",
                    "id": "50b5fe25-fd3d-49e8-88d1-97122e41d5ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Q3",
                    "type": "Button",
                    "id": "72be93c6-e5ba-4ed5-968d-44d5aa388427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Q4",
                    "type": "Button",
                    "id": "d5396551-4a1c-4539-93bd-a0845bc9ec01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "76997f98-c9c5-480f-b082-1397349f15cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "697b0a3a-0e80-4ec7-a1ef-1a1d565e7b19",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Q1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "764841d6-9110-47bf-9340-27836908357d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Q2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cbcaddf-b13c-4776-a554-c79589194a2c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Q3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70ad1e5a-ffca-494c-b508-be306963da5d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Q4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d9821d2-cbf9-4bd0-a0d2-33df7db1ea6c",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "fcb9aedd-ad31-493a-9a9f-0357629ba0b2",
            "actions": [
                {
                    "name": "AnyKey",
                    "type": "Value",
                    "id": "c07c9997-6129-4a93-a242-6bda1ea76d08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5ba2d04f-f715-467e-963a-0d0c30e3205c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StickLeft",
                    "type": "Value",
                    "id": "4b0fff7f-3a66-4889-980b-a706ce828071",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "d7abdf91-73c5-48d0-8e32-4d74069b9ecf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58c71a2d-f328-46d6-81f1-d116f8b22e25",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52c5b5a5-b343-42ee-9c81-67f4baaace47",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a53bc5a2-05e6-4715-a885-f2bca5bf92f6",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74eebc39-1ebd-4b08-820d-e827a602962c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7ad5967-62d7-4a1b-8457-bbe9f87d0a6c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0fd22e5-636e-47a7-9492-418699ee1aa7",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a060ea9-3a80-418a-865f-370430d7235e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c8c95ce-1773-46d0-8980-2e85fa89649e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24b80b6b-c17f-4ee9-8a8a-91428c5cace1",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38bd0af1-1ae3-470f-88e1-434b475abe2f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d402ded8-6f1b-4674-9d41-b8bf1348553c",
                    "path": "<DualShockGamepad>/touchpadButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc8f073e-75e2-4a62-b63a-66019221389e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88a0d669-40b6-42b5-8218-0738c0487257",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6b021d6-e959-4778-b5bd-8e69d7c252dc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11bc78a5-f95a-4bd9-8d18-4b78cfcf7d1b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9d20cb9-f683-4d45-8db2-e47b1fd062e0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8be91ca-353a-43fd-904a-ec2747778211",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdb889a8-b37c-4976-95e7-02b0c2005ea4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}